Added the clusters scores as a feature

--- a/feature_extraction.ipynb
+++ b/feature_extraction.ipynb
@@ -234,6 +234,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Essay cluster success percentages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "clustered = pd.read_csv('.data/myclusters.csv',names = ['projectid', 'cluster'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add to the feature vector X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X = X.merge(clustered,left_on='projectid',right_on='projectid',how='left') # Left merge\n",
+    "X['cluster'] = X['cluster'].fillna(0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
@@ -376,6 +413,7 @@
     "num_exciting_donations = np.array(X['num_exciting_donations'])\n",
     "num_exciting_projects =  np.array(X['num_exciting_projects'])\n",
     "num_exciting_projects_teach =  np.array(X['num_exciting_projects_teach'])\n",
+    "cluster_score =  np.array(X['cluster'])\n",
     "essays = np.array(df_essay_length['length(essay)'])"
    ]
   },
@@ -406,7 +444,8 @@
     "num_exciting_projects = max_abs_scaler.fit_transform(num_exciting_projects.reshape(-1,1)) #Reshape and scale  \n",
     "projects_data = np.column_stack((projects_data, num_exciting_projects))  #Add it as a column aka feature\n",
     "\n",
-    "\n",
+    "cluster_score = max_abs_scaler.fit_transform(cluster_score.reshape(-1,1)) #Reshape and scale  \n",
+    "projects_data = np.column_stack((projects_data, cluster_score))  #Add it as a column aka feature\n",
     "\n",
     "# Adding the 'num_exciting_projects_teach' results in overfitting and a poor leaderboard score, so it is commented out \n",
     "\n",
